not prevent enter on mobile

--- a/src/global.scss
+++ b/src/global.scss
@@ -561,7 +561,7 @@ img {
   user-select: none !important;
 
   &:active {
-    scale: 0.95;
+    scale: 0.95 !important;
   }
 }
 
